# sentence-transformers-server

./: .gitlab-ci.yml  LICENSE  README.md  pyproject.toml  server.py
public/: index.html
