[tool.poetry]
name = "sentence-transformers-server"
version = "0.1.0"
description = "Your own API endpoint for NLP."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
bottle = "^0.12.19"
sentence-transformers = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
