[tool.poetry]
name = "sentence-transformers-server"
version = "0.1.0"
description = "Your own API endpoint for NLP."
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
sentence-transformers = "^2.1.0"
cheroot = "^8.6.0"
bottle = {git = "https://github.com/bottlepy/bottle"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
